--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -206,10 +206,19 @@ check_c_source_compiles("
 #include <stdio.h>
 #define mytype(X) _Generic((X), int: 'i', float: 'f', default: 'u')
 int main() {
-        char type = mytype(0); // This should compile if _Generic is supported
+        char type = mytype(0);
         return 0;
 }
 " HAVE_C__GENERIC)
+
+check_c_source_compiles("
+#include <malloc.h>
+int main() {
+        mallopt(M_ARENA_MAX, 1);
+        mallopt(M_PERTURB, 0x5A);
+        return 0;
+}
+" HAVE_C_MALLOPT)
 
 check_c_source_compiles("
 #define _GNU_SOURCE
