--- a/config.cmake.h.in
+++ b/config.cmake.h.in
@@ -46,6 +46,13 @@
 #cmakedefine HAVE_NICE
 #cmakedefine HAVE_GETPRIORITY
 
+#cmakedefine HAVE_BACKTRACE
+#cmakedefine HAVE_CLOSE_RANGE
+#cmakedefine HAVE_SCHED_GETSCHEDULER
+#cmakedefine HAVE_SCHED_SETSCHEDULER
+#cmakedefine HAVE_SCHED_GET_PRIORITY_MIN
+#cmakedefine HAVE_SCHED_GET_PRIORITY_MAX
+
 #cmakedefine HAVE_SYSTEMD
 #cmakedefine HAVE_SD_JOURNAL_OS_ROOT
 #cmakedefine HAVE_SD_JOURNAL_OPEN_FILES_FD
