--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -184,12 +184,13 @@ check_library_exists(snappy snappy_compress "" HAVE_SNAPPY_LIB)
 #
 
 include(CheckSymbolExists)
-check_symbol_exists(major sys/sysmacros.h MAJOR_IN_SYSMACROS)
-check_symbol_exists(major sys/mkdev.h MAJOR_IN_MKDEV)
-check_symbol_exists(clock_gettime time.h HAVE_CLOCK_GETTIME)
-check_symbol_exists(strerror_r string.h HAVE_STRERROR_R)
-check_symbol_exists(finite math.h HAVE_FINITE)
-check_symbol_exists(isfinite math.h HAVE_ISFINITE)
+check_symbol_exists(major "sys/sysmacros.h" MAJOR_IN_SYSMACROS)
+check_symbol_exists(major "sys/mkdev.h" MAJOR_IN_MKDEV)
+check_symbol_exists(clock_gettime "time.h" HAVE_CLOCK_GETTIME)
+check_symbol_exists(strerror_r "string.h" HAVE_STRERROR_R)
+check_symbol_exists(finite "math.h" HAVE_FINITE)
+check_symbol_exists(isfinite "math.h" HAVE_ISFINITE)
+check_symbol_exists(dlsym "dlfcn.h" HAVE_DLSYM)
 
 check_function_exists(nice HAVE_NICE)
 check_function_exists(recvmmsg HAVE_RECVMMSG)
