--- a/config.cmake.h.in
+++ b/config.cmake.h.in
@@ -69,6 +69,13 @@
 #cmakedefine HAVE_C_MALLOPT
 #cmakedefine HAVE_SETNS
 
+#cmakedefine HAVE_FUNC_ATTRIBUTE_FORMAT
+#cmakedefine HAVE_FUNC_ATTRIBUTE_MALLOC
+#cmakedefine HAVE_FUNC_ATTRIBUTE_NOINLINE
+#cmakedefine HAVE_FUNC_ATTRIBUTE_NORETURN
+#cmakedefine HAVE_FUNC_ATTRIBUTE_RETURNS_NONNULL
+#cmakedefine HAVE_FUNC_ATTRIBUTE_WARN_UNUSED_RESULT
+
 // enabled features
 
 #cmakedefine ENABLE_OPENSSL
