--- a/config.cmake.h.in
+++ b/config.cmake.h.in
@@ -6,7 +6,7 @@
 #define __always_unused __attribute__((unused))
 #define __maybe_unused __attribute__((unused))
 
-#cmakedefine SIZEOF_VOID_P ${CMAKE_SIZEOF_VOID_P}
+#cmakedefine SIZEOF_VOID_P ${SIZEOF_VOID_P}
 
 // platform
 #cmakedefine COMPILED_FOR_FREEBSD
