--- a/config.cmake.h.in
+++ b/config.cmake.h.in
@@ -63,6 +63,7 @@
 
 // checked source compilation
 
+#cmakedefine HAVE_PTHREAD_GETNAME_NP
 #cmakedefine HAVE_ACCEPT4
 #cmakedefine STRERROR_R_CHAR_P
 #cmakedefine HAVE_C__GENERIC
