Add function/data section flags.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -165,17 +165,33 @@ if(NOT ${DISABLE_HARDENING})
         endif()
 endif()
 
-set(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE} ${EXTRA_HARDEN_FLAGS}")
-set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} ${EXTRA_HARDEN_FLAGS}")
+set(EXTRA_OPT_FLAGS "")
 
-set(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} ${EXTRA_HARDEN_FLAGS}")
-set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} ${EXTRA_HARDEN_FLAGS}")
+if(NOT ${CMAKE_C_FLAGS} MATCHES "function-sections")
+        check_c_compiler_flag("-ffunction-sections" HAVE_FUNCTION_SECTIONS)
+        if(HAVE_FUNCTION_SECTIONS)
+                set(EXTRA_OPT_FLAGS "${EXTRA_OPT_FLAGS} -ffunction-sections")
+        endif()
+endif()
 
-set(CMAKE_C_FLAGS_RELWITHDEBINFO "${CMAKE_C_FLAGS_RELWITHDEBINFO} ${EXTRA_HARDEN_FLAGS}")
-set(CMAKE_CXX_FLAGS_RELWITHDEBINFO "${CMAKE_CXX_FLAGS_RELWITHDEBINFO} ${EXTRA_HARDEN_FLAGS}")
+if(NOT ${CMAKE_C_FLAGS} MATCHES "data-sections")
+        check_c_compiler_flag("-fdata-sections" HAVE_DATA_SECTIONS)
+        if(HAVE_DATA_SECTIONS)
+                set(EXTRA_OPT_FLAGS "${EXTRA_OPT_FLAGS} -fdata-sections")
+        endif()
+endif()
 
-set(CMAKE_C_FLAGS_MINSIZEREL "${CMAKE_C_FLAGS_MINSIZEREL} ${EXTRA_HARDEN_FLAGS}")
-set(CMAKE_CXX_FLAGS_MINSIZEREL "${CMAKE_CXX_FLAGS_MINSIZEREL} ${EXTRA_HARDEN_FLAGS}")
+set(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE} ${EXTRA_HARDEN_FLAGS} ${EXTRA_OPT_FLAGS}")
+set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} ${EXTRA_HARDEN_FLAGS} ${EXTRA_OPT_FLAGS}")
+
+set(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} ${EXTRA_HARDEN_FLAGS} ${EXTRA_OPT_FLAGS}")
+set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} ${EXTRA_HARDEN_FLAGS} ${EXTRA_OPT_FLAGS}")
+
+set(CMAKE_C_FLAGS_RELWITHDEBINFO "${CMAKE_C_FLAGS_RELWITHDEBINFO} ${EXTRA_HARDEN_FLAGS} ${EXTRA_OPT_FLAGS}")
+set(CMAKE_CXX_FLAGS_RELWITHDEBINFO "${CMAKE_CXX_FLAGS_RELWITHDEBINFO} ${EXTRA_HARDEN_FLAGS} ${EXTRA_OPT_FLAGS}")
+
+set(CMAKE_C_FLAGS_MINSIZEREL "${CMAKE_C_FLAGS_MINSIZEREL} ${EXTRA_HARDEN_FLAGS} ${EXTRA_OPT_FLAGS}")
+set(CMAKE_CXX_FLAGS_MINSIZEREL "${CMAKE_CXX_FLAGS_MINSIZEREL} ${EXTRA_HARDEN_FLAGS} ${EXTRA_OPT_FLAGS}")
 
 #
 # detect OS
