cleanup and various fixes; fixed bug in previous dyncfg implementation on streaming that was sending the paylod in a way that allowed other streaming commands to be multiplexed

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -755,6 +755,10 @@ set(DAEMON_FILES
         daemon/config/dyncfg-files.c
         daemon/config/dyncfg-unittest.c
         daemon/config/dyncfg-inline.c
+        daemon/config/dyncfg-echo.c
+        daemon/config/dyncfg-internals.h
+        daemon/config/dyncfg-intercept.c
+        daemon/config/dyncfg-tree.c
 )
 
 set(H2O_FILES
