--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -125,149 +125,74 @@ include(CheckCXXCompilerFlag)
 if(CMAKE_BUILD_TYPE STREQUAL "Debug")
         option(DISABLE_HARDENING "disable adding extra compiler flags for hardening" TRUE)
 else()
-        # FIXME: Until https://github.com/netdata/netdata/pull/16731 resolves the issue
-        option(DISABLE_HARDENING "disable adding extra compiler flags for hardening" TRUE)
+        option(DISABLE_HARDENING "disable adding extra compiler flags for hardening" FALSE)
 endif()
+
+# Conditionally add an extra compiler flag to C and C++ flags.
+#
+# If the language flags already match the `match` argument, skip this flag.
+# Otherwise, check for support for `flag` and if support is found, add it to
+# the language-specific `target` flag group.
+function(add_simple_extra_compiler_flag match flag target)
+        set(CMAKE_REQUIRED_FLAGS "-Werror")
+
+        foreach(L c cxx)
+                string(TOUPPER ${LANG} LU)
+                if(NOT ${CMAKE_${LU}_FLAGS} MATCHES ${match})
+                        check_${L}_compiler_flag("${flag}", HAVE_FLAG)
+                        if(HAVE_FLAG)
+                                set(${target}_${LU}_FLAGS "${${target}_${LU}_FLAGS} ${flag}")
+                        endif()
+                endif()
+        endforeach()
+endfunction()
+
+# Same as add_simple_extra_compiler_flag, but check for a second flag if the
+# first one is unsupported.
+function(add_double_extra_compiler_flag match flag1 flag2 target)
+        set(CMAKE_REQUIRED_FLAGS "-Werror")
+
+        foreach(L c cxx)
+                string(TOUPPER ${LANG} LU)
+                if(NOT ${CMAKE_${LU}_FLAGS} MATCHES "stack-protector")
+                        check_${L}_compiler_flag("${flag1}" HAVE_FLAG_1)
+                        if(HAVE_FLAG_1)
+                                set(${target}_${LU}_FLAGS "${${target}_${LU}C_FLAGS} ${flag1}")
+                        else()
+                                check_${L}_compiler_flag("${flag2}" HAVE_FLAG_2)
+                                if(HAVE_FLAG_2)
+                                        set(${target}_${LU}C_FLAGS "${${target}_${LU}C_FLAGS} ${flag2}")
+                                endif()
+                        endif()
+                endif()
+        endforeach()
+endfunction()
 
 set(EXTRA_HARDENING_C_FLAGS "")
 set(EXTRA_HARDENING_CXX_FLAGS "")
 
-set(CMAKE_REQUIRED_FLAGS "-Werror")
+set(EXTRA_OPT_C_FLAGS "")
+set(EXTRA_OPT_CXX_FLAGS "")
+
+option(DISABLE_HARDENING "disable adding extra compiler flags for hardening" False)
+
 if(NOT ${DISABLE_HARDENING})
-        if(NOT ${CMAKE_C_FLAGS} MATCHES "stack-protector")
-                check_c_compiler_flag("-fstack-protector-strong" HAVE_STACK_PROTECTOR_STRONG_FLAG)
-                if(HAVE_STACK_PROTECTOR_STRONG_FLAG)
-                        set(EXTRA_HARDENING_C_FLAGS "${EXTRA_HARDENING_C_FLAGS} -fstack-protector-strong")
-                else()
-                        check_c_compiler_flag("-fstack-protector" HAVE_STACK_PROTECTOR)
-                        if(HAVE_STACK_PROTECTOR)
-                                set(EXTRA_HARDENING_C_FLAGS "${EXTRA_HARDENING_C_FLAGS} -fstack-protector")
-                        endif()
-                endif()
-        endif()
-
-        if(NOT ${CMAKE_CXX_FLAGS} MATCHES "stack-protector")
-                check_cxx_compiler_flag("-fstack-protector-strong" HAVE_STACK_PROTECTOR_STRONG_FLAG)
-                if(HAVE_STACK_PROTECTOR_STRONG_FLAG)
-                        set(EXTRA_HARDENING_CXX_FLAGS "${EXTRA_HARDENING_CXX_FLAGS} -fstack-protector-strong")
-                else()
-                        check_cxx_compiler_flag("-fstack-protector" HAVE_STACK_PROTECTOR)
-                        if(HAVE_STACK_PROTECTOR)
-                                set(EXTRA_HARDENING_CXX_FLAGS "${EXTRA_HARDENING_CXX_FLAGS} -fstack-protector")
-                        endif()
-                endif()
-        endif()
-
-        if(NOT ${CMAKE_C_FLAGS} MATCHES "stack-clash-protection")
-                check_c_compiler_flag("-fstack-clash-protection" HAVE_STACK_CLASH_FLAG)
-                if(HAVE_STACK_CLASH_FLAG)
-                        set(EXTRA_HARDENING_C_FLAGS "${EXTRA_HARDENING_C_FLAGS} -fstack-clash-protection")
-                endif()
-        endif()
-
-        if(NOT ${CMAKE_CXX_FLAGS} MATCHES "stack-clash-protection")
-                check_cxx_compiler_flag("-fstack-clash-protection" HAVE_STACK_CLASH_FLAG)
-                if(HAVE_STACK_CLASH_FLAG)
-                        set(EXTRA_HARDENING_CXX_FLAGS "${EXTRA_HARDENING_CXX_FLAGS} -fstack-clash-protection")
-                endif()
-        endif()
-
-        if(NOT ${CMAKE_C_FLAGS} MATCHES "-fcf-protection")
-                check_c_compiler_flag("-fcf-protection=full" HAVE_CFI_FLAG)
-                if(HAVE_CFI_FLAG)
-                        set(EXTRA_HARDENING_C_FLAGS "${EXTRA_HARDENING_C_FLAGS} -fcf-protection=full")
-                endif()
-        endif()
-
-        if(NOT ${CMAKE_CXX_FLAGS} MATCHES "-fcf-protection")
-                check_cxx_compiler_flag("-fcf-protection=full" HAVE_CFI_FLAG)
-                if(HAVE_CFI_FLAG)
-                        set(EXTRA_HARDENING_CXX_FLAGS "${EXTRA_HARDENING_CXX_FLAGS} -fcf-protection=full")
-                endif()
-        endif()
-
-        if(NOT ${CMAKE_C_FLAGS} MATCHES "branch-protection")
-                check_c_compiler_flag("-mbranch-protection=standard" HAVE_BRANCH_PROT_FLAG)
-                if(HAVE_BRANCH_PROT_FLAG)
-                        set(EXTRA_HARDENING_C_FLAGS "${EXTRA_HARDENING_C_FLAGS} -mbranch-protection=standard")
-                endif()
-        endif()
-
-        if(NOT ${CMAKE_CXX_FLAGS} MATCHES "branch-protection")
-                check_cxx_compiler_flag("-mbranch-protection=standard" HAVE_BRANCH_PROT_FLAG)
-                if(HAVE_BRANCH_PROT_FLAG)
-                        set(EXTRA_HARDENING_CXX_FLAGS "${EXTRA_HARDENING_CXX_FLAGS} -mbranch-protection=standard")
-                endif()
-        endif()
-
-        if(NOT ${CMAKE_C_FLAGS} MATCHES "_FORTIFY_SOURCE")
-                check_c_compiler_flag("-D_FORTIFY_SOURCE=3" HAVE_FORTIFY_SOURCE_3)
-                if(HAVE_FORTIFY_SOURCE_3)
-                        set(EXTRA_HARDENING_C_FLAGS "${EXTRA_HARDENING_C_FLAGS} -D_FRTIFY_SOURCE=3")
-                else()
-                        check_c_compiler_flag("-D_FORTIFY_SOURCE=2" HAVE_FORTIFY_SOURCE_2)
-                        if(HAVE_FORTIFY_SOURCE_2)
-                                set(EXTRA_HARDENING_C_FLAGS "${EXTRA_HARDENING_C_FLAGS} -D_FRTIFY_SOURCE=2")
-                        endif()
-                endif()
-        endif()
-
-        if(NOT ${CMAKE_CXX_FLAGS} MATCHES "_FORTIFY_SOURCE")
-                check_cxx_compiler_flag("-D_FORTIFY_SOURCE=3" HAVE_FORTIFY_SOURCE_3)
-                if(HAVE_FORTIFY_SOURCE_3)
-                        set(EXTRA_HARDENING_CXX_FLAGS "${EXTRA_HARDENING_CXX_FLAGS} -D_FRTIFY_SOURCE=3")
-                else()
-                        check_cxx_compiler_flag("-D_FORTIFY_SOURCE=2" HAVE_FORTIFY_SOURCE_2)
-                        if(HAVE_FORTIFY_SOURCE_2)
-                                set(EXTRA_HARDENING_CXX_FLAGS "${EXTRA_HARDENING_CXX_FLAGS} -D_FRTIFY_SOURCE=2")
-                        endif()
-                endif()
-        endif()
+        add_double_extra_flag("stack-protector", "-fstack-protector-strong", "-fstack-protector", EXTRA_HARDENING)
+        add_double_extra_flag("_FORTIFY_SOURCE", "-D_FORTIFY_SOURCE=3", "-D_FORTIFY_SOURCE=2", EXTRA_HARDENING)
+        add_simple_extra_compiler_flag("stack-clash-protection", "-fstack-clash-protection", EXTRA_HARDENING)
+        add_simple_extra_compiler_flag("-fcf-protection", "-fcf-protection=full", EXTRA_HARDENING)
+        add_simple_extra_compiler_flag("branch-protection", "-mbranch-protection=standard", EXTRA_HARDENING)
 endif()
 
-set(EXTRA_C_OPT_FLAGS "")
-set(EXTRA_CXX_OPT_FLAGS "")
+foreach(FLAG function-sections data-sections)
+        add_simple_extra_compiler_flag("${FLAG}", "-f${FLAG}" EXTRA_OPT)
+endforeach()
 
-if(NOT ${CMAKE_C_FLAGS} MATCHES "function-sections")
-        check_c_compiler_flag("-ffunction-sections" HAVE_FUNCTION_SECTIONS)
-        if(HAVE_FUNCTION_SECTIONS)
-                set(EXTRA_C_OPT_FLAGS "${EXTRA_C_OPT_FLAGS} -ffunction-sections")
-        endif()
-endif()
-
-if(NOT ${CMAKE_CXX_FLAGS} MATCHES "function-sections")
-        check_c_compiler_flag("-ffunction-sections" HAVE_FUNCTION_SECTIONS)
-        if(HAVE_FUNCTION_SECTIONS)
-                set(EXTRA_CXX_OPT_FLAGS "${EXTRA_CXX_OPT_FLAGS} -ffunction-sections")
-        endif()
-endif()
-
-if(NOT ${CMAKE_C_FLAGS} MATCHES "data-sections")
-        check_c_compiler_flag("-fdata-sections" HAVE_DATA_SECTIONS)
-        if(HAVE_DATA_SECTIONS)
-                set(EXTRA_C_OPT_FLAGS "${EXTRA_C_OPT_FLAGS} -fdata-sections")
-        endif()
-endif()
-
-if(NOT ${CMAKE_CXX_FLAGS} MATCHES "data-sections")
-        check_cxx_compiler_flag("-fdata-sections" HAVE_DATA_SECTIONS)
-        if(HAVE_DATA_SECTIONS)
-                set(EXTRA_CXX_OPT_FLAGS "${EXTRA_CXX_OPT_FLAGS} -fdata-sections")
-        endif()
-endif()
-unset(CMAKE_REQUIRED_FLAGS)
-
-set(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE} ${EXTRA_HARDENING_C_FLAGS} ${EXTRA_C_OPT_FLAGS}")
-set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} ${EXTRA_HARDENING_CXX_FLAGS} ${EXTRA_CXX_OPT_FLAGS}")
-
-set(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} ${EXTRA_HARDENING_C_FLAGS} ${EXTRA_C_OPT_FLAGS}")
-set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} ${EXTRA_HARDENING_CXX_FLAGS} ${EXTRA_CXX_OPT_FLAGS}")
-
-set(CMAKE_C_FLAGS_RELWITHDEBINFO "${CMAKE_C_FLAGS_RELWITHDEBINFO} ${EXTRA_HARDENING_C_FLAGS} ${EXTRA_C_OPT_FLAGS}")
-set(CMAKE_CXX_FLAGS_RELWITHDEBINFO "${CMAKE_CXX_FLAGS_RELWITHDEBINFO} ${EXTRA_HARDENING_CXX_FLAGS} ${EXTRA_CXX_OPT_FLAGS}")
-
-set(CMAKE_C_FLAGS_MINSIZEREL "${CMAKE_C_FLAGS_MINSIZEREL} ${EXTRA_HARDENING_C_FLAGS} ${EXTRA_C_OPT_FLAGS}")
-set(CMAKE_CXX_FLAGS_MINSIZEREL "${CMAKE_CXX_FLAGS_MINSIZEREL} ${EXTRA_HARDENING_CXX_FLAGS} ${EXTRA_CXX_OPT_FLAGS}")
+foreach(RELTYP RELEASE DEBUG RELWITHDEBINFO MINSIZEREL)
+        foreach(L C CXX)
+                set(CMAKE_${L}_FLAGS_${RELTYP} "${CMAKE_${L}_FLAGS_${RELTYP}} ${EXTRA_HARDENING_C_FLAGS} ${EXTRA_OPT_C_FLAGS}")
+        endforeach()
+endforeach()
 
 #
 # detect OS
