--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -136,15 +136,19 @@ endif()
 function(add_simple_extra_compiler_flag match flag target)
         set(CMAKE_REQUIRED_FLAGS "-Werror")
 
-        foreach(L c cxx)
-                string(TOUPPER ${LANG} LU)
-                if(NOT ${CMAKE_${LU}_FLAGS} MATCHES ${match})
-                        check_${L}_compiler_flag("${flag}", HAVE_FLAG)
-                        if(HAVE_FLAG)
-                                set(${target}_${LU}_FLAGS "${${target}_${LU}_FLAGS} ${flag}")
-                        endif()
+        if(NOT ${CMAKE_C_FLAGS} MATCHES ${match})
+                check_c_compiler_flag("${flag}", HAVE_FLAG)
+                if(HAVE_FLAG)
+                        set(${target}_C_FLAGS "${${target}_C_FLAGS} ${flag}")
                 endif()
-        endforeach()
+        endif()
+
+        if(NOT ${CMAKE_CXX_FLAGS} MATCHES ${match})
+                check_cxx_compiler_flag("${flag}", HAVE_FLAG)
+                if(HAVE_FLAG)
+                        set(${target}_CXX_FLAGS "${${target}_CXX_FLAGS} ${flag}")
+                endif()
+        endif()
 endfunction()
 
 # Same as add_simple_extra_compiler_flag, but check for a second flag if the
@@ -152,20 +156,29 @@ endfunction()
 function(add_double_extra_compiler_flag match flag1 flag2 target)
         set(CMAKE_REQUIRED_FLAGS "-Werror")
 
-        foreach(L c cxx)
-                string(TOUPPER ${LANG} LU)
-                if(NOT ${CMAKE_${LU}_FLAGS} MATCHES "stack-protector")
-                        check_${L}_compiler_flag("${flag1}" HAVE_FLAG_1)
-                        if(HAVE_FLAG_1)
-                                set(${target}_${LU}_FLAGS "${${target}_${LU}C_FLAGS} ${flag1}")
-                        else()
-                                check_${L}_compiler_flag("${flag2}" HAVE_FLAG_2)
-                                if(HAVE_FLAG_2)
-                                        set(${target}_${LU}C_FLAGS "${${target}_${LU}C_FLAGS} ${flag2}")
-                                endif()
+        if(NOT ${CMAKE_C_FLAGS} MATCHES ${match})
+                check_c_compiler_flag("${flag1}" HAVE_FLAG_1)
+                if(HAVE_FLAG_1)
+                        set(${target}_C_FLAGS "${${target}_C_FLAGS} ${flag1}")
+                else()
+                        check_c_compiler_flag("${flag2}" HAVE_FLAG_2)
+                        if(HAVE_FLAG_2)
+                                set(${target}_C_FLAGS "${${target}_C_FLAGS} ${flag2}")
                         endif()
                 endif()
-        endforeach()
+        endif()
+
+        if(NOT ${CMAKE_CXX_FLAGS} MATCHES ${match})
+                check_cxx_compiler_flag("${flag1}" HAVE_FLAG_1)
+                if(HAVE_FLAG_1)
+                        set(${target}_CXX_FLAGS "${${target}_CXX_FLAGS} ${flag1}")
+                else()
+                        check_cxx_compiler_flag("${flag2}" HAVE_FLAG_2)
+                        if(HAVE_FLAG_2)
+                                set(${target}_CXX_FLAGS "${${target}_CXX_FLAGS} ${flag2}")
+                        endif()
+                endif()
+        endif()
 endfunction()
 
 set(EXTRA_HARDENING_C_FLAGS "")
