Fix more typos.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -190,8 +190,8 @@ set(EXTRA_OPT_CXX_FLAGS "")
 option(DISABLE_HARDENING "disable adding extra compiler flags for hardening" False)
 
 if(NOT ${DISABLE_HARDENING})
-        add_double_extra_flag("stack-protector", "-fstack-protector-strong", "-fstack-protector", EXTRA_HARDENING)
-        add_double_extra_flag("_FORTIFY_SOURCE", "-D_FORTIFY_SOURCE=3", "-D_FORTIFY_SOURCE=2", EXTRA_HARDENING)
+        add_double_extra_compiler_flag("stack-protector", "-fstack-protector-strong", "-fstack-protector", EXTRA_HARDENING)
+        add_double_extra_compiler_flag("_FORTIFY_SOURCE", "-D_FORTIFY_SOURCE=3", "-D_FORTIFY_SOURCE=2", EXTRA_HARDENING)
         add_simple_extra_compiler_flag("stack-clash-protection", "-fstack-clash-protection", EXTRA_HARDENING)
         add_simple_extra_compiler_flag("-fcf-protection", "-fcf-protection=full", EXTRA_HARDENING)
         add_simple_extra_compiler_flag("branch-protection", "-mbranch-protection=standard", EXTRA_HARDENING)
