--- a/src/collectors/ebpf.plugin/ebpf.d.conf
+++ b/src/collectors/ebpf.plugin/ebpf.d.conf
@@ -61,7 +61,7 @@
     cachestat = no
     dcstat = no
     disk = no
-    fd = yes
+    fd = no
     filesystem = no
     hardirq = no
     mdflush = no
@@ -72,6 +72,6 @@
     socket = no
     softirq = yes
     sync = no
-    swap = yes
+    swap = no
     vfs = no
     network connections = no
