Fix bogus commas.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -137,14 +137,14 @@ function(add_simple_extra_compiler_flag match flag target)
         set(CMAKE_REQUIRED_FLAGS "-Werror")
 
         if(NOT ${CMAKE_C_FLAGS} MATCHES ${match})
-                check_c_compiler_flag("${flag}", HAVE_FLAG)
+                check_c_compiler_flag("${flag}" HAVE_FLAG)
                 if(HAVE_FLAG)
                         set(${target}_C_FLAGS "${${target}_C_FLAGS} ${flag}")
                 endif()
         endif()
 
         if(NOT ${CMAKE_CXX_FLAGS} MATCHES ${match})
-                check_cxx_compiler_flag("${flag}", HAVE_FLAG)
+                check_cxx_compiler_flag("${flag}" HAVE_FLAG)
                 if(HAVE_FLAG)
                         set(${target}_CXX_FLAGS "${${target}_CXX_FLAGS} ${flag}")
                 endif()
@@ -190,15 +190,15 @@ set(EXTRA_OPT_CXX_FLAGS "")
 option(DISABLE_HARDENING "disable adding extra compiler flags for hardening" False)
 
 if(NOT ${DISABLE_HARDENING})
-        add_double_extra_compiler_flag("stack-protector", "-fstack-protector-strong", "-fstack-protector", EXTRA_HARDENING)
-        add_double_extra_compiler_flag("_FORTIFY_SOURCE", "-D_FORTIFY_SOURCE=3", "-D_FORTIFY_SOURCE=2", EXTRA_HARDENING)
-        add_simple_extra_compiler_flag("stack-clash-protection", "-fstack-clash-protection", EXTRA_HARDENING)
-        add_simple_extra_compiler_flag("-fcf-protection", "-fcf-protection=full", EXTRA_HARDENING)
-        add_simple_extra_compiler_flag("branch-protection", "-mbranch-protection=standard", EXTRA_HARDENING)
+        add_double_extra_compiler_flag("stack-protector" "-fstack-protector-strong" "-fstack-protector" EXTRA_HARDENING)
+        add_double_extra_compiler_flag("_FORTIFY_SOURCE" "-D_FORTIFY_SOURCE=3" "-D_FORTIFY_SOURCE=2" EXTRA_HARDENING)
+        add_simple_extra_compiler_flag("stack-clash-protection" "-fstack-clash-protection" EXTRA_HARDENING)
+        add_simple_extra_compiler_flag("-fcf-protection" "-fcf-protection=full" EXTRA_HARDENING)
+        add_simple_extra_compiler_flag("branch-protection" "-mbranch-protection=standard" EXTRA_HARDENING)
 endif()
 
 foreach(FLAG function-sections data-sections)
-        add_simple_extra_compiler_flag("${FLAG}", "-f${FLAG}" EXTRA_OPT)
+        add_simple_extra_compiler_flag("${FLAG}" "-f${FLAG}" EXTRA_OPT)
 endforeach()
 
 foreach(RELTYP RELEASE DEBUG RELWITHDEBINFO MINSIZEREL)
