--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -157,8 +157,8 @@ function(add_double_extra_compiler_flag match flag1 flag2 target)
         set(CMAKE_REQUIRED_FLAGS "-Werror")
 
         if(NOT ${CMAKE_C_FLAGS} MATCHES ${match})
-                check_c_compiler_flag("${flag1}" HAVE_FLAG_1)
-                if(HAVE_FLAG_1)
+                check_c_compiler_flag("${flag1}" HAVE_FLAG_1_${match})
+                if(HAVE_FLAG_1_${match})
                         set(${target}_C_FLAGS "${${target}_C_FLAGS} ${flag1}")
                 else()
                         check_c_compiler_flag("${flag2}" HAVE_FLAG_2)
@@ -169,12 +169,12 @@ function(add_double_extra_compiler_flag match flag1 flag2 target)
         endif()
 
         if(NOT ${CMAKE_CXX_FLAGS} MATCHES ${match})
-                check_cxx_compiler_flag("${flag1}" HAVE_FLAG_1)
-                if(HAVE_FLAG_1)
+                check_cxx_compiler_flag("${flag1}" HAVE_FLAG_1_${match})
+                if(HAVE_FLAG_1_${match})
                         set(${target}_CXX_FLAGS "${${target}_CXX_FLAGS} ${flag1}")
                 else()
-                        check_cxx_compiler_flag("${flag2}" HAVE_FLAG_2)
-                        if(HAVE_FLAG_2)
+                        check_cxx_compiler_flag("${flag2}" HAVE_FLAG_2_${match})
+                        if(HAVE_FLAG_2_${match})
                                 set(${target}_CXX_FLAGS "${${target}_CXX_FLAGS} ${flag2}")
                         endif()
                 endif()
