Fix flag variable names to make them behave correctly in checks.
CMake adds a preprocessor define with the name of the variable being
defined by a compiler flag check, so we need to ensure not only that
the variable name is unique, but also that it is a valid name for a C
preprocessor definition.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -128,6 +128,13 @@ else()
         option(DISABLE_HARDENING "disable adding extra compiler flags for hardening" FALSE)
 endif()
 
+# Construct a pre-processor safe name
+function(make_cpp_safe_name value target)
+        string(REPLACE "-" "_" tmp "${value}")
+        string(REPLACE "=" "_" tmp "${tmp}")
+        set(${target} "${tmp}" PARENT_SCOPE)
+endfunction()
+
 # Conditionally add an extra compiler flag to C and C++ flags.
 #
 # If the language flags already match the `match` argument, skip this flag.
@@ -136,16 +143,18 @@ endif()
 function(add_simple_extra_compiler_flag match flag target)
         set(CMAKE_REQUIRED_FLAGS "-Werror")
 
+        make_cpp_safe_name("${flag}" flag_name)
+
         if(NOT ${CMAKE_C_FLAGS} MATCHES ${match})
-                check_c_compiler_flag("${flag}" HAVE_FLAG)
-                if(HAVE_FLAG)
+                check_c_compiler_flag("${flag}" HAVE_C_${flag_name})
+                if(HAVE_C_${flag_name})
                         set(${target}_C_FLAGS "${${target}_C_FLAGS} ${flag}")
                 endif()
         endif()
 
         if(NOT ${CMAKE_CXX_FLAGS} MATCHES ${match})
-                check_cxx_compiler_flag("${flag}" HAVE_FLAG)
-                if(HAVE_FLAG)
+                check_cxx_compiler_flag("${flag}" HAVE_CXX_${flag_name})
+                if(HAVE_CXX_${flag_name})
                         set(${target}_CXX_FLAGS "${${target}_CXX_FLAGS} ${flag}")
                 endif()
         endif()
@@ -156,25 +165,28 @@ endfunction()
 function(add_double_extra_compiler_flag match flag1 flag2 target)
         set(CMAKE_REQUIRED_FLAGS "-Werror")
 
+        make_cpp_safe_name("${flag1}" flag1_name)
+        make_cpp_safe_name("${flag2}" flag2_name)
+
         if(NOT ${CMAKE_C_FLAGS} MATCHES ${match})
-                check_c_compiler_flag("${flag1}" HAVE_FLAG_1_${match})
-                if(HAVE_FLAG_1_${match})
+                check_c_compiler_flag("${flag1}" HAVE_C_${flag1_name})
+                if(HAVE_C_${flag1_name})
                         set(${target}_C_FLAGS "${${target}_C_FLAGS} ${flag1}")
                 else()
-                        check_c_compiler_flag("${flag2}" HAVE_FLAG_2)
-                        if(HAVE_FLAG_2)
+                        check_c_compiler_flag("${flag2}" HAVE_C_${flag2_name})
+                        if(HAVE_C_${flag2_name})
                                 set(${target}_C_FLAGS "${${target}_C_FLAGS} ${flag2}")
                         endif()
                 endif()
         endif()
 
         if(NOT ${CMAKE_CXX_FLAGS} MATCHES ${match})
-                check_cxx_compiler_flag("${flag1}" HAVE_FLAG_1_${match})
-                if(HAVE_FLAG_1_${match})
+                check_cxx_compiler_flag("${flag1}" HAVE_CXX_${flag1_name})
+                if(HAVE_CXX_${flag1_name})
                         set(${target}_CXX_FLAGS "${${target}_CXX_FLAGS} ${flag1}")
                 else()
-                        check_cxx_compiler_flag("${flag2}" HAVE_FLAG_2_${match})
-                        if(HAVE_FLAG_2_${match})
+                        check_cxx_compiler_flag("${flag2}" HAVE_CXX_${flag5_name})
+                        if(HAVE_CXX_${flag2_name})
                                 set(${target}_CXX_FLAGS "${${target}_CXX_FLAGS} ${flag2}")
                         endif()
                 endif()
