--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -148,14 +148,14 @@ function(add_simple_extra_compiler_flag match flag target)
         if(NOT ${CMAKE_C_FLAGS} MATCHES ${match})
                 check_c_compiler_flag("${flag}" HAVE_C_${flag_name})
                 if(HAVE_C_${flag_name})
-                        set(${target}_C_FLAGS "${${target}_C_FLAGS} ${flag}")
+                        set(${target}_C_FLAGS "${${target}_C_FLAGS} ${flag}" PARENT_SCOPE)
                 endif()
         endif()
 
         if(NOT ${CMAKE_CXX_FLAGS} MATCHES ${match})
                 check_cxx_compiler_flag("${flag}" HAVE_CXX_${flag_name})
                 if(HAVE_CXX_${flag_name})
-                        set(${target}_CXX_FLAGS "${${target}_CXX_FLAGS} ${flag}")
+                        set(${target}_CXX_FLAGS "${${target}_CXX_FLAGS} ${flag}" PARENT_SCOPE)
                 endif()
         endif()
 endfunction()
@@ -171,11 +171,11 @@ function(add_double_extra_compiler_flag match flag1 flag2 target)
         if(NOT ${CMAKE_C_FLAGS} MATCHES ${match})
                 check_c_compiler_flag("${flag1}" HAVE_C_${flag1_name})
                 if(HAVE_C_${flag1_name})
-                        set(${target}_C_FLAGS "${${target}_C_FLAGS} ${flag1}")
+                        set(${target}_C_FLAGS "${${target}_C_FLAGS} ${flag1}" PARENT_SCOPE)
                 else()
                         check_c_compiler_flag("${flag2}" HAVE_C_${flag2_name})
                         if(HAVE_C_${flag2_name})
-                                set(${target}_C_FLAGS "${${target}_C_FLAGS} ${flag2}")
+                                set(${target}_C_FLAGS "${${target}_C_FLAGS} ${flag2}" PARENT_SCOPE)
                         endif()
                 endif()
         endif()
@@ -183,11 +183,11 @@ function(add_double_extra_compiler_flag match flag1 flag2 target)
         if(NOT ${CMAKE_CXX_FLAGS} MATCHES ${match})
                 check_cxx_compiler_flag("${flag1}" HAVE_CXX_${flag1_name})
                 if(HAVE_CXX_${flag1_name})
-                        set(${target}_CXX_FLAGS "${${target}_CXX_FLAGS} ${flag1}")
+                        set(${target}_CXX_FLAGS "${${target}_CXX_FLAGS} ${flag1}" PARENT_SCOPE)
                 else()
-                        check_cxx_compiler_flag("${flag2}" HAVE_CXX_${flag5_name})
+                        check_cxx_compiler_flag("${flag2}" HAVE_CXX_${flag2_name})
                         if(HAVE_CXX_${flag2_name})
-                                set(${target}_CXX_FLAGS "${${target}_CXX_FLAGS} ${flag2}")
+                                set(${target}_CXX_FLAGS "${${target}_CXX_FLAGS} ${flag2}" PARENT_SCOPE)
                         endif()
                 endif()
         endif()
