update_replication_documentation: Update configuration file to have only one pattern for boolean value

--- a/streaming/stream.conf
+++ b/streaming/stream.conf
@@ -186,7 +186,7 @@
     # Indicate whether this child is an ephemeral node. An ephemeral node will become unavailable
     # after the specified duration of "cleanup ephemeral hosts after secs" (as defined in the db section of netdata.conf)
     # from the time of the node's last connection.
-    #is ephemeral node = false
+    #is ephemeral node = no
 
 # -----------------------------------------------------------------------------
 # 3. PER SENDING HOST SETTINGS, ON PARENT NETDATA
@@ -262,4 +262,4 @@
     # Indicate whether this child is an ephemeral node. An ephemeral node will become unavailable
     # after the specified duration of "cleanup ephemeral hosts after secs" (as defined in the db section of netdata.conf)
     # from the time of the node's last connection.
-    #is ephemeral node = false
+    #is ephemeral node = no
