update_replication_documentation: Fix wrong parameter inside stream.conf (part II)

--- a/streaming/stream.conf
+++ b/streaming/stream.conf
@@ -181,7 +181,7 @@
     #seconds to replicate = 86400
 
     # The duration we want to replicate per each step.
-    #replication_step = 600
+    #seconds per replication step = 600
 
     # Indicate whether this child is an ephemeral node. An ephemeral node will become unavailable
     # after the specified duration of "cleanup ephemeral hosts after secs" (as defined in the db section of netdata.conf)
